@@ -6,5 +6,4 @@
 
 <h1>Custom Value/OID</h1>
 
-<p>This search in the trap &#34;Value&#34; fields, and also in the fields &#34;Custom OID&#34; and &#34;Custom Value&#34;, that is, in the rest of the TRAP fields. If you use a regular expression you can use selectors in order to load _snmp_f1_, _snmp_f2_ and _snmp_f3_ macros and replace it in Field #1 (Alias, name), Field #2 (Single Line)	
-and Field #3 (Full Text).</p>
+<p>This search in the trap &#34;Value&#34; fields, and also in the fields &#34;Custom OID&#34; and &#34;Custom Value&#34;, that is, in the rest of the TRAP fields.</p>
