@@ -6,5 +6,4 @@
 
 <h1>Custom Value/OID</h1>
 
-<p>Campos personalizados enviados en el trap. Pueden ser datos muy complejos, que tengan una lógica específica en función del dispositivo que envía el trap. Un trap puede enviar varios datos en este campo. Si usas expresion regular puedes usar selectores para cargar las macros _snmp_f1_, _snmp_f2_ y _snmp_f3_ y reemplazarlas Field #1 (Alias, name), Field #2 (Single Line)	
-y Field #3 (Full Text).</p>
+<p>Campos personalizados enviados en el trap. Pueden ser datos muy complejos, que tengan una lógica específica en función del dispositivo que envía el trap. Un trap puede enviar varios datos en este campo.</p>
